# tooni

./: .gitignore  Cargo.toml  README.md  \  characters.sqlite3  data.sqlite3  input_output.rs
src/: character.rs  database.rs  input.rs  interface.rs  main.rs  state.rs
src/data/: alignments.rs  background.rs  character.rs  class.rs  database.rs  feature.rs  gender.rs  items.rs  language.rs  mod.rs  proficiency.rs  race.rs  spells.rs  stats.rs  tables.rs  test.rs
src/database/: database.rs
src/state/: app.rs  character_screen.rs  character_sheet.rs  mod.rs  select_screen.rs  tabs.rs
