[package]
name = "tui-am-i"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
rusqlite = "0.26.1"
once_cell = "1.8.0"
anyhow = "1.0.51"
