[package]
name = "tui-am-i"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
rusqlite = {version = "0.26.1", features = ["bundled"]}
once_cell = "1.8.0"
anyhow = "1.0.51"
enum-iterator = "0.7.0"
